# agentic-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/: basic_usage.py  complete_workflow.py
src/agentic_api/: __init__.py  cli.py
src/agentic_api/core/: __init__.py  agent.py  config.py  generator.py
src/agentic_api/testing/: __init__.py  client_tester.py
